# Contact-book-FastAPI-edu

./: .gitignore  README.md  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 1b35cc69d3e1_init.py  61962eec31ce_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  birthdays.py  contacts_crud.py  contacts_search.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_unit_repository_contacts.py  test_unit_repository_users.py
