[tool.poetry]
name = "contact-book-fastapi-edu"
version = "0.1.0"
description = ""
authors = ["olgapasichnyuk <olgapasichnyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "contact_book_fastapi_edu"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["fastapi-limiter"], version = "^0.95.1"}
sqlalchemy = "^2.0.9"
libgravatar = "^1.0.4"
uvicorn = "^0.21.1"
psycopg2 = "^2.9.6"
alembic = "^1.10.3"
pydentic = {extras = ["dotenv"], version = "^0.0.1.dev3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.7"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
fastapi-limiter = "^0.1.5"
asyncio = "^3.4.3"
redis = {extras = ["asyncio"], version = "^4.5.4"}
cloudinary = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
